--- a/sass/blocks/footer-blocks/page-footer.scss
+++ b/sass/blocks/footer-blocks/page-footer.scss
@@ -5,32 +5,26 @@
   text-align: center;
   max-width: 940px;
   margin: 0 auto;
-
   @media #{$tablet} {
     padding: 32px 20px;
   }
-
   @media #{$desktop} {
     padding: 95px 0;
   }
-
 }
 
 .page-footer__app-logo {
-    text-align: center;
-    margin: 0;
-    height: 41px;
-
+  text-align: center;
+  margin: 0;
+  height: 41px;
   @media #{$tablet} {
     margin-top: 3px;
     margin-left: 5px;
     margin-bottom: 11px;
   }
-
   @media #{$desktop} {
-      margin-left: 0;
+    margin-left: 0;
   }
-
   @media #{$mobile-only} {
     margin-bottom: 40px;
   }
@@ -43,30 +37,28 @@
   line-height: 18px;
   text-align: center;
   color: $light-blue;
-
   @media #{$desktop} {
     font-size: 18px;
   }
 }
 
 .page-footer__copyright-link {
-    font-size: 14px;
-    line-height: 18px;
+  font-size: 14px;
+  line-height: 18px;
 
   &:hover {
-      .page-footer__copyright-logo {
-          fill: $light-blue
-      }
+    .page-footer__copyright-logo {
+      fill: $light-blue;
+    }
   }
 
   &:focus {
-      .page-footer__copyright-logo {
-          opacity: 0.3;
-      }
+    .page-footer__copyright-logo {
+      opacity: 0.3;
+    }
   }
-
   @media #{$desktop} {
-      margin-top: 8px;
+    margin-top: 8px;
   }
 }
 
@@ -76,28 +68,28 @@
   margin-left: 10px;
   margin-top: 6px;
 }
-
 @media #{$mobile-only} {
   .page-footer--hidden {
-      display: none;
+    display: none;
   }
+
   .page-footer {
-      flex-direction: column;
-      padding: 39px 10px;
+    flex-direction: column;
+    padding: 39px 10px;
   }
+
   .page-footer__app-logo {
-      margin-bottom: 31px;
+    margin-bottom: 31px;
   }
 }
-
 @media #{$desktop} {
-    .page-footer--clean {
-        padding: 68px 0;
-    }
+  .page-footer--clean {
+    padding: 68px 0;
+  }
 }
 
 .page-footer--form {
-    @media #{$desktop} {
-        padding: 50px 0;
-    }
+  @media #{$desktop} {
+    padding: 50px 0;
+  }
 }
