--- a/sass/blocks/header-blocks/download.scss
+++ b/sass/blocks/header-blocks/download.scss
@@ -1,12 +1,10 @@
 .download {
-  padding: 30px 0px;
+  padding: 30px 0;
   width: 100%;
   color: $white;
   box-sizing: border-box;
-
   text-align: center;
-  background-color:$bg-dark-blue;
-
+  background-color: $bg-dark-blue;
   @media #{$tablet} {
     background: none;
     padding: 75px 0;
@@ -29,7 +27,6 @@
   flex-direction: column;
   align-content: stretch;
   margin: auto;
-
   @media #{$tablet} {
     width: 300px;
     margin: 0;
@@ -50,11 +47,9 @@
   width: 190px;
   margin-bottom: 30px;
   display: none;
-
   @media #{$tablet} {
     display: block;
   }
-
   @media #{$desktop} {
     font-size: 50px;
     width: 300px;
@@ -67,33 +62,30 @@
   display: block;
   margin-bottom: 40px;
   width: 100%;
-  padding: 15px 0px;
+  padding: 15px 0;
 
   &:hover {
     background: $white;
     color: $pink;
   }
+
   &:focus {
     background: $white;
     color: rgba(210,40,86,0.3);
   }
-
   @media #{$tablet} {
     margin-bottom: 52px;
   }
-
   @media #{$desktop} {
     margin-bottom: 75px;
   }
 }
 
 .download__links {
-  margin: 0 25px;
-  margin-bottom: 20px;
+  margin: 0 25px 20px;
   list-style: none;
   display: flex;
   justify-content: space-around;
-
   @media #{$tablet} {
     margin-bottom: 40px;
   }
@@ -118,9 +110,11 @@
   &--ios {
     background-image: url("../img/logo-apple.svg");
   }
+
   &--android {
     background-image: url("../img/logo-android.svg");
   }
+
   &--windows {
     background-image: url("../img/logo-microsoft.svg");
   }
@@ -131,7 +125,6 @@
   line-height: 24px;
   text-align: center;
   font-weight: 300;
-
   @media #{$tablet} {
     font-size: 18px;
   }
