--- a/sass/blocks/header-blocks/page-header.scss
+++ b/sass/blocks/header-blocks/page-header.scss
@@ -14,47 +14,40 @@
     font-weight: 300;
 
     &--form {
-        margin: 97px auto 50px;
-
-        @media #{$tablet} {
-            width: 500px;
-            margin: 179px auto 75px;
-        }
-
-        @media #{$desktop} {
-            width: 820px;
-            margin: 171px auto 99px;
-        }
+      margin: 97px auto 50px;
+      @media #{$tablet} {
+        width: 500px;
+        margin: 179px auto 75px;
+      }
+      @media #{$desktop} {
+        width: 820px;
+        margin: 171px auto 99px;
+      }
     }
 
     &--photo {
-        margin: 97px auto 80px;
-
-        @media #{$tablet} {
-            margin: 176px auto 140px;
-            width: 400px;
-        }
-        @media #{$desktop} {
-            margin: 171px auto 99px;
-        }
+      margin: 97px auto 80px;
+      @media #{$tablet} {
+        margin: 176px auto 140px;
+        width: 400px;
+      }
+      @media #{$desktop} {
+        margin: 171px auto 99px;
+      }
     }
-
     @media #{$tablet} {
-        font-size: 50px;
+      font-size: 50px;
     }
   }
-
   @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-      background: url("../img/bg-back-mobile@2x.jpg") bottom no-repeat;
-      background-size: 700px auto;
-      background-position: center bottom;
+    background: url("../img/bg-back-mobile@2x.jpg") bottom no-repeat;
+    background-size: 700px auto;
+    background-position: center bottom;
   }
-
   @media #{$tablet} {
     align-items: flex-start;
     background: none;
     background: $bg-light-blue url("../img/bg-back-tablet@1x.jpg") bottom no-repeat;
-
     @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
       align-items: flex-start;
       background: none;
@@ -65,7 +58,6 @@
   }
   @media #{$desktop} {
     background: $bg-light-blue url("../img/bg-back-desktop@1x.jpg") bottom no-repeat;
-
     @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
       background: url("../img/bg-back-desktop@2x.jpg") bottom no-repeat;
       background-size: 2550px auto;
@@ -77,73 +69,67 @@
     background: $bg-light-blue url("../img/bg-back-mobile@1x.jpg") bottom no-repeat;
 
     .header__wrapper {
-        min-height: 462px;
-        width: 100%;
-        margin: 0 auto;
-        max-width: 960px;
-        background: url("../img/iphone-hand-mobile@1x.png") 0% 101% no-repeat;
+      min-height: 462px;
+      width: 100%;
+      margin: 0 auto;
+      max-width: 960px;
+      background: url("../img/iphone-hand-mobile@1x.png") 0 101% no-repeat;
     }
-
     @media #{$retina} {
       background: $bg-light-blue url("../img/bg-back-mobile@2x.jpg") bottom no-repeat;
       background-size: 705px auto;
 
       .header__wrapper {
-          min-height: 462px;
-          width: 100%;
-          max-width: 960px;
-          background: url("../img/iphone-hand-mobile@2x.png") 0% 100% no-repeat;
-          background-size: 258px auto;
+        min-height: 462px;
+        width: 100%;
+        max-width: 960px;
+        background: url("../img/iphone-hand-mobile@2x.png") 0 100% no-repeat;
+        background-size: 258px auto;
       }
     }
-
     @media #{$tablet} {
+      align-items: flex-start;
+      background: none;
+      background: $bg-light-blue url("../img/bg-back-tablet@1x.jpg") bottom no-repeat;
+
+      .header__wrapper {
+        min-height: 729px;
+        background: url("../img/iphone-hand-tablet@1x.png") 50% 100% no-repeat;
+      }
+      @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
         align-items: flex-start;
         background: none;
-        background: $bg-light-blue url("../img/bg-back-tablet@1x.jpg") bottom no-repeat;
+        background: $bg-light-blue url("../img/bg-back-tablet@2x.jpg") bottom no-repeat;
+        background-size: 1200px auto;
 
         .header__wrapper {
-            min-height: 729px;
-            background: url("../img/iphone-hand-tablet@1x.png") 50% 100% no-repeat;
+          min-height: 729px;
+          background: url("../img/iphone-hand-tablet@1x.png") 50% 100% no-repeat;
+          background-size: 700px auto;
         }
-
-        @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-            align-items: flex-start;
-            background: none;
-            background: $bg-light-blue url("../img/bg-back-tablet@2x.jpg") bottom no-repeat;
-            background-size: 1200px auto;
-
-            .header__wrapper {
-                min-height: 729px;
-                background: url("../img/iphone-hand-tablet@1x.png") 50% 100% no-repeat;
-                background-size: 700px auto;
-            }
-        }
+      }
     }
-
     @media #{$desktop} {
+      align-items: flex-start;
+      background: none;
+      background: $bg-light-blue url("../img/bg-back-desktop@1x.jpg") bottom no-repeat;
+
+      .header__wrapper {
+        min-height: 853px;
+        background: url("../img/iphone-hand-desktop@1x.png") 26px 100% no-repeat;
+      }
+      @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
         align-items: flex-start;
         background: none;
-        background: $bg-light-blue url("../img/bg-back-desktop@1x.jpg") bottom no-repeat;
+        background: $bg-light-blue url("../img/bg-back-desktop@2x.jpg") bottom no-repeat;
+        background-size: 2560px auto;
 
         .header__wrapper {
-            min-height: 853px;
-            background: url("../img/iphone-hand-desktop@1x.png") 26px 100% no-repeat;
+          min-height: 853px;
+          background: url("../img/iphone-hand-desktop@1x.png") 26px 100% no-repeat;
+          background-size: 1050px auto;
         }
-
-         @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-             align-items: flex-start;
-             background: none;
-             background: $bg-light-blue url("../img/bg-back-desktop@2x.jpg") bottom no-repeat;
-             background-size: 2560px auto;
-
-             .header__wrapper {
-                 min-height: 853px;
-                 background: url("../img/iphone-hand-desktop@1x.png") 26px 100% no-repeat;
-                 background-size: 1050px auto;
-             }
-         }
+      }
     }
-
   }
 }
