--- a/sass/blocks/main-blocks/competition-form.scss
+++ b/sass/blocks/main-blocks/competition-form.scss
@@ -9,18 +9,16 @@
 
   input:hover,
   textarea:hover {
-      border-color: $light-blue;
+    border-color: $light-blue;
   }
 
   input:focus,
   textarea:focus {
-      border-color: $pink;
+    border-color: $pink;
   }
-
   @media #{$tablet} {
     padding: 0 20px;
   }
-
   @media #{$desktop} {
     padding: 0 10px;
   }
@@ -40,7 +38,6 @@
   flex-direction: column;
   width: 278px;
   margin: auto;
-
   @media #{$tablet} {
     width: 100%;
     flex-direction: row;
@@ -62,7 +59,6 @@
   &--other-view {
     display: none;
   }
-
   @media #{$tablet} {
     margin-left: 0;
     margin-right: 20px;
@@ -83,7 +79,6 @@
   padding: 25px 20px;
   align-content: space-around;
   align-items: center;
-
   @media #{$tablet} {
     order: 2;
     padding: 25px 0 15px;
@@ -98,11 +93,11 @@
     justify-content: space-between;
 
     .competition-form__text-input {
-        margin: 0;
+      margin: 0;
     }
 
     .competition-form__text-input-wrapper {
-        margin: 0;
+      margin: 0;
     }
   }
 }
@@ -138,25 +133,27 @@
 }
 
 .competition-form__block--4 {
-    .competition-form__label-right:hover {
-        &::before {
-            border-color: $light-blue;
-        }
+  .competition-form__label-right:hover {
+    &::before {
+      border-color: $light-blue;
     }
-    input[type="radio"]:checked + label::before {
-        border-color: $pink;
-    }
+  }
+
+  input[type="radio"]:checked + label::before {
+    border-color: $pink;
+  }
 }
 
 .competition-form__block--2 {
-    .competition-form__label-right:hover {
-        &::before {
-            border-color: $light-blue;
-        }
+  .competition-form__label-right:hover {
+    &::before {
+      border-color: $light-blue;
     }
-    input[type="checkbox"]:checked + label::before {
-        border-color: $pink;
-    }
+  }
+
+  input[type="checkbox"]:checked + label::before {
+    border-color: $pink;
+  }
 }
 
 .competition-form__label-right {
@@ -203,7 +200,6 @@
       transform: rotate(-45deg);
     }
   }
-
   @media #{$tablet} {
     background: $white;
     order: 5;
@@ -212,46 +208,44 @@
     margin-bottom: 63px;
 
     .competition-form__block-header {
-        width: auto;
-        margin: 0 auto;
-        margin-top: -51px;
-        margin-bottom: 33px;
-        background-color: $white;
-        padding: 0 32px;
-        max-width: 440px;
+      width: auto;
+      margin: -51px auto 33px;
+      background-color: $white;
+      padding: 0 32px;
+      max-width: 440px;
     }
 
     .competition-form__block-wrapper {
-        width: auto;
-        margin: 0;
+      width: auto;
+      margin: 0;
     }
 
     .competition-form__label-right {
       &::before {
-          left: 9px;
+        left: 9px;
       }
     }
 
     .competition-form__checkbox:checked + .competition-form__label-right {
       &::after {
-         left: 17px;
+        left: 17px;
       }
     }
   }
   @media #{$desktop} {
-    padding: 41px 0px 20px 47px;
+    padding: 41px 0 20px 47px;
 
     .competition-form__label-right {
-        margin-bottom: 0;
+      margin-bottom: 0;
     }
 
     .competition-form__block-wrapper {
-        flex-direction: column;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        height: 165px;
-        box-sizing: border-box;
-        padding-bottom: 25px;
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      height: 165px;
+      box-sizing: border-box;
+      padding-bottom: 25px;
     }
   }
 }
@@ -269,9 +263,8 @@
   }
 
   .competition-form__label-up {
-      margin-bottom: 6px;
+    margin-bottom: 6px;
   }
-
   @media #{$tablet} {
     order: 4;
     border: 2px solid $border-grey;
@@ -289,13 +282,13 @@
     }
 
     .competition-form__label-up {
-        padding-left: 18px;
+      padding-left: 18px;
     }
 
     .contest-form__text-input-wrapper--mail .competition-form__text-input,
     .contest-form__text-input-wrapper--phone .competition-form__text-input {
-        padding-right: 75px;
-        margin-bottom: 11px;
+      padding-right: 75px;
+      margin-bottom: 11px;
     }
 
     .contest-form__text-input-wrapper--mail,
@@ -305,7 +298,7 @@
     }
 
     .contest-form__text-input-wrapper--mail {
-        margin-bottom: 0px;
+      margin-bottom: 0;
     }
 
     .contest-form__text-input-wrapper--phone {
@@ -313,49 +306,48 @@
     }
 
     .competition-form__input-wrapper {
-        width: 100%;
-        display: none;
+      width: 100%;
+      display: none;
     }
 
     .competition-form__input-decor {
-        width: 60px;
-        height: 58px;
-        position: absolute;
-        top: 0;
-        right: 0;
+      width: 60px;
+      height: 58px;
+      position: absolute;
+      top: 0;
+      right: 0;
     }
 
     .competition-form__input-decor--phone {
-        background: $border-grey url(../img/icons/icon-phone.svg) center no-repeat;
+      background: $border-grey url("../img/icons/icon-phone.svg") center no-repeat;
     }
 
     .competition-form__input-decor--mail {
-        background: $border-grey url(../img/icons/icon-mail.svg) center no-repeat;
+      background: $border-grey url("../img/icons/icon-mail.svg") center no-repeat;
     }
   }
   @media #{$desktop} {
     padding: 28px 58px 9px;
 
     .contest-form__text-input-wrapper--phone {
-        width: 376px;
-        margin: 0;
+      width: 376px;
+      margin: 0;
     }
+
     .contest-form__text-input-wrapper--mail {
-        width: 376px;
-        margin-right: 0px;
-        margin-top: -108px;
+      width: 376px;
+      margin-right: 0;
+      margin-top: -108px;
     }
 
     .competition-form__block-header {
-        margin-top: -40px;
-        margin-bottom: 37px;
+      margin-top: -40px;
+      margin-bottom: 37px;
     }
-
     // .competition-form__label-up--mobile-view,
     // .competition-form__text-input--mobile-view {
     //   display: none;
     // }
-
     // .competition-form__label-up--other-view,
     // .competition-form__text-input--other-view {
     //   display: inline-block;
@@ -369,7 +361,6 @@
 .contest-form__text-input-wrapper--phone .competition-form__text-input {
   width: 100%;
   box-sizing: border-box;
-
   @media #{$tablet} {
     margin-bottom: 15px;
   }
@@ -385,7 +376,7 @@
     &::before {
       content: "";
       position: absolute;
-      left: 0px;
+      left: 0;
       top: 11px;
       width: 35px;
       height: 35px;
@@ -393,9 +384,8 @@
       background: $white;
       border-radius: 50%;
     }
-
     @media #{$tablet} {
-        padding: 15px 0 14px 58px;
+      padding: 15px 0 14px 58px;
     }
   }
 
@@ -406,17 +396,16 @@
 
   .competition-form__radio:checked + .competition-form__label-right {
     &::after {
-        content: "";
-        width: 0;
-        height: 0;
-        border: 8px solid #d22856;
-        border-radius: 50%;
-        position: absolute;
-        top: 23px;
-        left: 12px;
+      content: "";
+      width: 0;
+      height: 0;
+      border: 8px solid #d22856;
+      border-radius: 50%;
+      position: absolute;
+      top: 23px;
+      left: 12px;
     }
   }
-
   @media #{$tablet} {
     background-color: $white;
     order: 3;
@@ -436,22 +425,21 @@
       margin: 0;
     }
   }
-
   @media #{$desktop} {
     width: 46%;
     margin-right: 0;
     padding: 35px 70px 30px;
 
     .competition-form__block-header {
-        margin-left: -20px;
-        width: 112%;
-        padding: 0;
+      margin-left: -20px;
+      width: 112%;
+      padding: 0;
     }
   }
 }
 
 .competition-form__block--5 {
-    padding: 40px 0 44px;
+  padding: 40px 0 44px;
 
   .competition-form__block-header {
     margin-bottom: 15px;
@@ -465,7 +453,6 @@
     border: 2px solid $border-grey;
     min-height: 168px;
   }
-
   @media #{$tablet} {
     order: 6;
     border: 2px solid $border-grey;
@@ -473,28 +460,27 @@
     padding: 45px 60px 50px;
 
     .competition-form__block-wrapper {
-        width: auto;
-        margin: 0;
+      width: auto;
+      margin: 0;
     }
 
     .competition-form__block-header {
-        width: auto;
-        margin: -54px auto 36px;
-        padding: 0 40px;
-        background-color: $white;
+      width: auto;
+      margin: -54px auto 36px;
+      padding: 0 40px;
+      background-color: $white;
     }
 
     textarea {
-        padding: 15px 20px 8px;
+      padding: 15px 20px 8px;
     }
-
     @media #{$desktop} {
-        padding: 45px 60px 45px;
-        margin-bottom: 62px;
+      padding: 45px 60px;
+      margin-bottom: 62px;
 
-        textarea {
-            min-height: 101px;
-        }
+      textarea {
+        min-height: 101px;
+      }
     }
   }
 }
@@ -505,25 +491,23 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 16px;
-
   @media #{$tablet} {
-      order: 7;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: baseline;
-      margin-bottom: 32px;
-      max-width: 940px;
-      width: 100%;
+    order: 7;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+    margin-bottom: 32px;
+    max-width: 940px;
+    width: 100%;
 
     .competition-form__submit-btn {
-        flex-grow: 0;
-        padding: 18px 60px;
-        margin: 0;
+      flex-grow: 0;
+      padding: 18px 60px;
+      margin: 0;
     }
   }
-
   @media #{$desktop} {
-      margin-bottom: 0;
+    margin-bottom: 0;
   }
 }
 
@@ -542,11 +526,11 @@
   flex-grow: 1;
 
   &:hover {
-      background-color: $green-hover;
+    background-color: $green-hover;
   }
 
   &:focus {
-      color: rgba(255,255,255,0.3);
+    color: rgba(255,255,255,0.3);
   }
 }
 
@@ -562,9 +546,8 @@
 }
 
 .competition-form__hidden-element {
-    display: none;
-
-    @media #{$desktop} {
-        display: inline;
-    }
+  display: none;
+  @media #{$desktop} {
+    display: inline;
+  }
 }
