--- a/sass/blocks/main-blocks/contacts.scss
+++ b/sass/blocks/main-blocks/contacts.scss
@@ -2,14 +2,12 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding: 40px 5% 40px;
+  padding: 40px 5%;
   color: $black;
   box-sizing: border-box;
-
   @media #{$tablet} {
     padding: 42px 5% 25px;
   }
-
   @media #{$desktop} {
     padding: 60px 0 45px;
   }
@@ -20,13 +18,11 @@
   line-height: 1.3;
   margin-bottom: 35px;
   font-weight: 300;
-
   @media #{$tablet} {
     font-size: 40px;
     padding: 0 90px;
     margin-bottom: 41px;
   }
-
   @media #{$desktop} {
     font-size: 50px;
     margin-bottom: 52px;
@@ -42,8 +38,7 @@
 }
 
 .contacts__item {
-  margin: auto;
-  margin-bottom: 19px;
+  margin: auto auto 19px;
   max-width: 250px;
 
   b {
@@ -51,11 +46,9 @@
     font-size: 18px;
     line-height: 20px;
     margin-bottom: 7px;
-
     @media #{$tablet} {
       margin-bottom: 8px;
     }
-
     @media #{$desktop} {
       margin-bottom: 22px;
     }
@@ -75,19 +68,16 @@
   }
 
   &--adress {
-    margin-bottom: 0px;
-
+    margin-bottom: 0;
     @media #{$tablet} {
       margin-top: 46px;
     }
   }
-
   @media #{$tablet} {
-    margin-bottom: 0px;
+    margin-bottom: 0;
   }
-
   @media #{$desktop} {
-    margin-top: 0px;
+    margin-top: 0;
     max-width: 300px;
   }
 
@@ -100,12 +90,13 @@
 
 .contacts__item--email,
 .contacts__item--phone-number {
-    a:hover {
-        color: $light-blue;
-        text-decoration: underline;
-    }
-    a:focus {
-        color: rgba(40,54,69,0.3);
-        text-decoration: none;
-    }
+  a:hover {
+    color: $light-blue;
+    text-decoration: underline;
+  }
+
+  a:focus {
+    color: rgba(40,54,69,0.3);
+    text-decoration: none;
+  }
 }
