--- a/sass/blocks/main-blocks/services-package.scss
+++ b/sass/blocks/main-blocks/services-package.scss
@@ -3,12 +3,10 @@
   background: url("../img/bg-triangle-white.svg") no-repeat center top $bg-grey;
   background-size: 105% auto;
   padding: 91px 5% 36px;
-
   @media #{$tablet} {
     padding: 97px 20px 73px;
     background-size: 135% auto;
   }
-
   @media #{$desktop} {
     padding: 151px 10px 96px;
     background-size: 130% auto;
@@ -23,7 +21,6 @@
   justify-content: center;
   margin-bottom: 40px;
   flex-grow: 1;
-
   @media #{$tablet} {
     display: flex;
     width: 25%;
@@ -33,8 +30,8 @@
   &--options {
     display: none;
 
-    .services-package__service-name,
-    .services-package__service {
+    .services-package__service,
+    .services-package__service-name {
       border-left: 2px solid $border-grey;
       font-size: 14px;
       line-height: 30px;
@@ -42,9 +39,8 @@
     }
 
     .services-package__service-name {
-      padding: 0px;
+      padding: 0;
     }
-
     @media #{$tablet} {
       display: flex;
     }
@@ -58,19 +54,15 @@
   justify-content: flex-end;
 }
 
-.services-package__service-name,
-.services-package__service {
+.services-package__service,
+.services-package__service-name {
   border: 1px solid $border-grey;
   border-left: 2px solid $border-grey;
   border-right: 2px solid $border-grey;
-
   @media #{$tablet} {
-    border-left: 0px;
+    border-left: 0;
   }
 }
-
-
-
 
 .services-package__service-name {
   position: relative;
@@ -80,21 +72,20 @@
   text-align: center;
   font-size: 18px;
   line-height: 30px;
-  padding: 18px 0px;
+  padding: 18px 0;
   text-transform: uppercase;
 
   h3 {
-      font-size: 18px;
-
-      @media #{$tablet} {
-        font-size: 16px;
-      }
-      @media #{$desktop} {
-        font-size: 16px;
-      }
+    font-size: 18px;
+    @media #{$tablet} {
+      font-size: 16px;
+    }
+    @media #{$desktop} {
+      font-size: 16px;
+    }
   }
 
-  &--hit::before  {
+  &--hit::before {
     content: "";
     position: absolute;
     width: 72px;
@@ -103,7 +94,6 @@
     top: 0;
     background: url("../img/bg-hit.png") no-repeat left top;
     background-size: contain;
-
     @media #{$tablet} {
       width: 60px;
       height: 60px;
@@ -125,7 +115,6 @@
     height: 20px;
     left: -19px;
     top: 13px;
-
     @media #{$tablet} {
       left: -20px;
       top: 8px;
@@ -139,24 +128,20 @@
   span {
     font-size: 24px;
     font-weight: normal;
-
     @media #{$tablet} {
       font-size: 18px;
       font-weight: 100;
     }
-
     @media #{$desktop} {
       font-size: 24px;
     }
   }
-
   @media #{$tablet} {
     font-size: 14px;
-    padding: 12px 0px 6px;
+    padding: 12px 0 6px;
   }
-
   @media #{$desktop} {
-    padding: 18px 0px;
+    padding: 18px 0;
     font-size: 16px;
   }
 }
@@ -186,10 +171,9 @@
     right: 16px;
     transform: rotate(-45deg);
     box-shadow: none;
-
     @media #{$tablet} {
-        top: 5px;
-        right: 60px;
+      top: 5px;
+      right: 60px;
     }
     @media #{$desktop} {
       top: 15px;
@@ -198,8 +182,8 @@
   }
 
   &--deleted {
-    &::before,
-    &::after {
+    &::after,
+    &::before {
       content: "";
       width: 35px;
       height: 3px;
@@ -207,34 +191,31 @@
       position: absolute;
       top: 27px;
       right: 15px;
-
-        @media #{$tablet} {
-          top: 20px;
-          right: 56px;
-        }
-
-        @media #{$desktop} {
-          top: 28px;
-          right: 96px;
-        }
+      @media #{$tablet} {
+        top: 20px;
+        right: 56px;
       }
+      @media #{$desktop} {
+        top: 28px;
+        right: 96px;
+      }
+    }
 
     &::before {
       transform: rotate(45deg);
       box-shadow: none;
-      }
-  &::after {
-    transform: rotate(-45deg);
+    }
+
+    &::after {
+      transform: rotate(-45deg);
     }
   }
-
   @media #{$tablet} {
     min-height: 45px;
     padding: 6px 18px;
     vertical-align: middle;
     box-sizing: border-box;
   }
-
   @media #{$desktop} {
     min-height: 60px;
     padding: 12px 20px;
