--- a/sass/global/scaffolding.scss
+++ b/sass/global/scaffolding.scss
@@ -3,7 +3,7 @@
 body {
   font-size:  14px;
   line-height: 24px;
-  font-family: 'Open Sans', 'Arial', sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   color: $light-blue;
   font-style: normal;
   background: $white;
